# Vortex

./: .gitignore  CMakeLists.txt  License  Readme.md  VideoProcessor.cpp  VideoProcessor.h  docker-compose.yml  main.cpp
frontend/: index.html  package-lock.json  package.json
frontend/src/: .env  .env.example  App.tsx  StarryBackground.css  index.css
frontend/src/components/: Header.tsx  ProtectedRoute.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/pages/: Auth.tsx  Landing.tsx  Video.tsx
server/: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.api  Dockerfile.worker  package-lock.json  package.json  tsconfig.json
server/src/: http-server.ts  index.ts  worker.ts
server/src/Queue/: queue.ts
server/src/common/adapters/: storage.adapter.ts
server/src/common/config/: db.ts  env.ts  limit.ts  redis.config.ts
server/src/common/middlewares/: auth.middleware.ts  errorhandler.middleware.ts  rate-limit.ts
server/src/config/: db.ts  env.ts  passport.setup.ts
server/src/controllers/: socket.handler.ts  video.controller.ts
server/src/middlewares/: errorhandler.middleware.ts
server/src/models/: Clip.model.ts  User.model.ts
server/src/modules/auth/: User.model.ts  auth.routes.ts  passport.setup.ts
server/src/modules/video/: video.controller.ts  video.queue.ts  video.routes.ts  video.service.ts
server/src/modules/video/processor/: ffmpeg.processor.ts
server/src/routes/: auth.routes.ts  video.routes.ts
server/src/services/: video.service.ts
server/src/types/: types.ts
server/src/utils/: logger.ts
